# stripe_integration

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
stripe_integration/: manage.py
stripe_integration/product/: admin.py  models.py  urls.py  views.py
stripe_integration/product/migrations/: 0001_initial.py
stripe_integration/product/templates/: item_landing.html  landing_1.html
stripe_integration/stripe_integration/: asgi.py  settings.py  urls.py  wsgi.py
