[tool.poetry]
name = "django_and_stripe_integration"
version = "0.1.0"
description = ""
authors = ["Viktor Nikolaev <viktornicolaev1995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"
stripe = "^3.0.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
